log.txt
[3/4] Compiling Vulkan-Engine.exe (Monolithic AVX2 Host) ...
main.c: In function 'vibe_record_commands':
main.c:503:66: error: 'RenderThreadInit' has no member named 'pfnSetFrontFace'
  503 |     PFN_vkCmdSetFrontFace pfnFront = (PFN_vkCmdSetFrontFace)g_wsi.pfnSetFrontFace;
      |                                                                  ^
main.c:567:29: error: 'DrawCommand' has no member named 'front_face'
  567 |         if (pfnFront && draw->front_face != current_front) {
      |                             ^~
main.c:568:44: error: 'DrawCommand' has no member named 'front_face'
  568 |             pfnFront(cmd, (VkFrontFace)draw->front_face);
      |                                            ^~
main.c:569:33: error: 'DrawCommand' has no member named 'front_face'
  569 |             current_front = draw->front_face;
      |                                 ^~
ERROR: boot.exe compilation failed!
